# debugverse-youtube

./: README.md  main.py
ai_blog/: pyproject.toml
ai_blog/src/: main.py
ai_blog/src/app/: creator.py  db.py  models.py
ai_blog/templates/: posts.html
diy_voice_assistant/: index.html  main.py  pyproject.toml
go-genai-chatbot/: client.go  go.mod  go.sum  main.go  tool.go
image_rename/: .env  main.py  pyproject.toml
pdf_summary_and_sentiment/: main.py  pyproject.toml
summarize_huge_documents_kmeans/src/kmeans/: main.py
whisper_turbo/: gui.py  pyproject.toml  transcribe.py
