[project]
name = "imgclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=1.0.10",
    "langchain-google-vertexai>=1.0.10",
    "langchain>=0.2.15",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.3",
]
