[project]
name = "pdf-summary-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2.14",
    "langchain-ollama>=0.1.1",
    "pypdf>=4.3.1",
    "langchain-community>=0.2.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
